--- a/docs/csharp/language-reference/compiler-messages/cs0178.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0178.md
@@ -7,27 +7,27 @@ helpviewer_keywords:
 - CS0178
 ms.assetid: 73e48648-6c0c-4987-92ca-fb2015a38910
 ms.openlocfilehash: a1939db032bee593884c04dd981d6c77493867f1
-ms.sourcegitcommit: 5fd80619c760fa8c25d33a6f5661247cb65da465
+ms.sourcegitcommit: ccd8c36b0d74d99291d41aceb14cf98d74dc9d2b
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 11/01/2018
-ms.locfileid: "50744394"
+ms.lasthandoff: 12/10/2018
+ms.locfileid: "53152827"
 ---
-# <a name="compiler-error-cs0178"></a><span data-ttu-id="1b402-102">컴파일러 오류 CS0178</span><span class="sxs-lookup"><span data-stu-id="1b402-102">Compiler Error CS0178</span></span>
-<span data-ttu-id="1b402-103">잘못된 차수 지정자: ‘,’ 또는 ‘]’가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="1b402-103">Invalid rank specifier: expected ',' or ']'</span></span>  
+# <a name="compiler-error-cs0178"></a><span data-ttu-id="a30dc-102">컴파일러 오류 CS0178</span><span class="sxs-lookup"><span data-stu-id="a30dc-102">Compiler Error CS0178</span></span>
+<span data-ttu-id="a30dc-103">잘못된 차수 지정자: ‘,’ 또는 ‘]’가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="a30dc-103">Invalid rank specifier: expected ',' or ']'</span></span>  
   
- <span data-ttu-id="1b402-104">배열 초기화 형식이 잘못되었습니다.</span><span class="sxs-lookup"><span data-stu-id="1b402-104">An array initialization was ill-formed.</span></span> <span data-ttu-id="1b402-105">예를 들어 배열 크기를 지정할 때 다음을 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="1b402-105">For example, when specifying the array dimensions, you can specify the following:</span></span>  
+ <span data-ttu-id="a30dc-104">배열 초기화 형식이 잘못되었습니다.</span><span class="sxs-lookup"><span data-stu-id="a30dc-104">An array initialization was ill-formed.</span></span> <span data-ttu-id="a30dc-105">예를 들어 배열 크기를 지정할 때 다음을 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="a30dc-105">For example, when specifying the array dimensions, you can specify the following:</span></span>  
   
--   <span data-ttu-id="1b402-106">괄호 안의 숫자</span><span class="sxs-lookup"><span data-stu-id="1b402-106">A number in brackets</span></span>  
+-   <span data-ttu-id="a30dc-106">괄호 안의 숫자</span><span class="sxs-lookup"><span data-stu-id="a30dc-106">A number in brackets</span></span>  
   
--   <span data-ttu-id="1b402-107">빈 괄호</span><span class="sxs-lookup"><span data-stu-id="1b402-107">Empty brackets</span></span>  
+-   <span data-ttu-id="a30dc-107">빈 괄호</span><span class="sxs-lookup"><span data-stu-id="a30dc-107">Empty brackets</span></span>  
   
--   <span data-ttu-id="1b402-108">괄호로 묶인 쉼표</span><span class="sxs-lookup"><span data-stu-id="1b402-108">A comma enclosed in brackets</span></span>  
+-   <span data-ttu-id="a30dc-108">괄호로 묶인 쉼표</span><span class="sxs-lookup"><span data-stu-id="a30dc-108">A comma enclosed in brackets</span></span>  
   
- <span data-ttu-id="1b402-109">자세한 내용은 배열 이니셜라이저에 대한 [배열](../../../csharp/programming-guide/arrays/index.md) 및 C# 사양([C# 언어 사양](~/_csharplang/spec/arrays.md#array-initializers)) 섹션을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="1b402-109">For more information, see [Arrays](../../../csharp/programming-guide/arrays/index.md) and the C# specification ([C# Language Specification](~/_csharplang/spec/arrays.md#array-initializers)) section on array initializers.</span></span>  
+ <span data-ttu-id="a30dc-109">자세한 내용은 배열 이니셜라이저에 대한 [배열](../../../csharp/programming-guide/arrays/index.md) 및 C# 사양([C# 언어 사양](~/_csharplang/spec/arrays.md#array-initializers)) 섹션을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="a30dc-109">For more information, see [Arrays](../../../csharp/programming-guide/arrays/index.md) and the C# specification ([C# Language Specification](~/_csharplang/spec/arrays.md#array-initializers)) section on array initializers.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="1b402-110">예</span><span class="sxs-lookup"><span data-stu-id="1b402-110">Example</span></span>  
- <span data-ttu-id="1b402-111">다음 샘플에서는 CS0178을 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="1b402-111">The following sample generates CS0178.</span></span>  
+## <a name="example"></a><span data-ttu-id="a30dc-110">예</span><span class="sxs-lookup"><span data-stu-id="a30dc-110">Example</span></span>  
+ <span data-ttu-id="a30dc-111">다음 샘플에서는 CS0178을 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="a30dc-111">The following sample generates CS0178.</span></span>  
   
 ```csharp  
 // CS0178.cs  
