--- a/docs/visual-basic/misc/bc30025.md
+++ b/docs/visual-basic/misc/bc30025.md
@@ -1,5 +1,5 @@
 ---
-title: 속성이 누락 &#39;End 속성&#39;
+title: 속성에 'End Property'가 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30025
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30025
 ms.assetid: 00d7bd6d-e3d7-4a4b-9310-b611889be3e2
-ms.openlocfilehash: 634367b2d9d6e71ebc12098f4c32c4bfeb0cce21
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 4b2d113952b5880d094b8a488236d226aab979a0
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33603745"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53776607"
 ---
-# <a name="property-missing-39end-property39"></a>속성이 누락 &#39;End 속성&#39;
+# <a name="property-missing-end-property"></a>속성에 'End Property'가 없습니다.
 `End` 문은 종료하는 블록과 일치해야 합니다. `Property` 정의가 제대로 종료되지 않았습니다.  
   
  **오류 ID:** BC30025  
