--- a/docs/visual-basic/misc/bc31139.md
+++ b/docs/visual-basic/misc/bc31139.md
@@ -1,5 +1,5 @@
 ---
-title: '&#39;&lt;이름&gt; &#39; 기본 인스턴스를 통해 자신을 참조할 수 없습니다, 사용 하 여 &#39;Me&#39; 대신'
+title: "'&lt;이름을&gt;' 'm e'를 대신 사용 하십시오 기본 인스턴스를 통해 자신을 참조할 수 없습니다."
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31139
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31139
 ms.assetid: 459e5d5a-d526-4cd0-934e-96e4e1eb51bb
-ms.openlocfilehash: 39e3c23956ace6cb0d53d34482ff6297a7aadce2
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 2b51b9ae10efff44524f8d3be8962ddcbcfe8673
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33622088"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53778509"
 ---
-# <a name="39ltnamegt39-cannot-refer-to-itself-through-its-default-instance-use-39me39-instead"></a>&#39;&lt;이름&gt; &#39; 기본 인스턴스를 통해 자신을 참조할 수 없습니다, 사용 하 여 &#39;Me&#39; 대신
+# <a name="ltnamegt-cannot-refer-to-itself-through-its-default-instance-use-me-instead"></a>'&lt;이름을&gt;' 'm e'를 대신 사용 하십시오 기본 인스턴스를 통해 자신을 참조할 수 없습니다.
 폼 내부에서 해당 폼을 기본 인스턴스로 참조하려고 했습니다. 이 경우 폼이 자신을 재귀적으로 호출할 수 있습니다.  
   
  대체로 폼의 현재 인스턴스를 참조하는 경우 기본 인스턴스 대신 `Me` 를 사용해야 합니다.  
