--- a/docs/visual-basic/misc/bc33004.md
+++ b/docs/visual-basic/misc/bc33004.md
@@ -1,5 +1,5 @@
 ---
-title: '&#39;구현&#39; 연산자 선언에서 유효 하지 않습니다'
+title: 연산자 선언에는 'Implements'를 사용할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33004
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC33004
 ms.assetid: 22f27f4d-4bbd-4f8f-a6e8-0fc10efb268d
-ms.openlocfilehash: f7ef48d31ca86dbab0a0e0ee9623fcbc8013dec8
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 38b187c9b75dd9a0ef05edc3f3d9571dcc4cc8e7
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33630499"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53775047"
 ---
-# <a name="39implements39-is-not-valid-on-operator-declaration"></a>&#39;구현&#39; 연산자 선언에서 유효 하지 않습니다
-[Operator 문](../../visual-basic/language-reference/statements/operator-statement.md) 지정는 [구현](../../visual-basic/language-reference/statements/implements-clause.md) 키워드입니다.  
+# <a name="implements-is-not-valid-on-operator-declaration"></a>연산자 선언에는 'Implements'를 사용할 수 없습니다.
+[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) 은 [Implements](../../visual-basic/language-reference/statements/implements-clause.md) 키워드를 지정합니다.  
   
  `Function` 또는 `Sub` 프로시저, 속성 또는 이벤트만 인터페이스 멤버를 구현할 수 있습니다. 구현에 대 한 자세한 내용은 다음을 참조 하세요.  
   
@@ -32,4 +32,4 @@ ms.locfileid: "33630499"
 ## <a name="see-also"></a>참고 항목  
  [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)  
  [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [방법: 변환 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+ [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
