--- a/docs/visual-basic/misc/bc33011.md
+++ b/docs/visual-basic/misc/bc33011.md
@@ -1,5 +1,5 @@
 ---
-title: 연산자를 선언 해야 &#39;공개&#39;
+title: 연산자를 'Public'으로 선언해야 합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33011
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC33011
 ms.assetid: 67fc0dee-4ef5-4afc-a63a-f7d20bce7954
-ms.openlocfilehash: 1b45b6db5e0e7feed953b75d2ea1f6b626da6333
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 18ae95d51b2de7289034e2fc06d7a5c9c10f4b42
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33630793"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53770522"
 ---
-# <a name="operators-must-be-declared-39public39"></a>연산자를 선언 해야 &#39;공개&#39;
-[Operator 문](../../visual-basic/language-reference/statements/operator-statement.md) 포함 되지 않습니다는 [공용](../../visual-basic/language-reference/modifiers/public.md) 키워드입니다.  
+# <a name="operators-must-be-declared-public"></a>연산자를 'Public'으로 선언해야 합니다.
+[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) 에 [Public](../../visual-basic/language-reference/modifiers/public.md) 키워드가 없습니다.  
   
- `Operator` 절차를 수행 하려면 둘 다는 `Public` 및 [Shared](../../visual-basic/language-reference/modifiers/shared.md) 키워드 및 변환 연산자 필요는 [Widening](../../visual-basic/language-reference/modifiers/widening.md) 또는 [문제의 범위 제한](../../visual-basic/language-reference/modifiers/narrowing.md)키워드입니다.  
+ `Operator` 절차를 수행 하려면 둘 다는 `Public` 및 [공유](../../visual-basic/language-reference/modifiers/shared.md) 키워드와 변환 연산자가 필요 합니다 [Widening](../../visual-basic/language-reference/modifiers/widening.md) 또는 [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md)키워드입니다.  
   
  **오류 ID:** BC33011  
   
@@ -29,4 +29,4 @@ ms.locfileid: "33630793"
  [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
  [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)  
  [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [방법: 변환 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+ [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
