--- a/docs/visual-basic/misc/bc30025.md
+++ b/docs/visual-basic/misc/bc30025.md
@@ -1,5 +1,5 @@
 ---
-title: 속성이 누락 &#39;End 속성&#39;
+title: 속성에 'End Property'가 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30025
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30025
 ms.assetid: 00d7bd6d-e3d7-4a4b-9310-b611889be3e2
-ms.openlocfilehash: 634367b2d9d6e71ebc12098f4c32c4bfeb0cce21
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 4b2d113952b5880d094b8a488236d226aab979a0
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33603745"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53776607"
 ---
-# <a name="property-missing-39end-property39"></a><span data-ttu-id="96a3c-102">속성이 누락 &#39;End 속성&#39;</span><span class="sxs-lookup"><span data-stu-id="96a3c-102">Property missing &#39;End Property&#39;</span></span>
-<span data-ttu-id="96a3c-103">`End` 문은 종료하는 블록과 일치해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="96a3c-103">An `End` statement must match the block it terminates.</span></span> <span data-ttu-id="96a3c-104">`Property` 정의가 제대로 종료되지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="96a3c-104">A `Property` definition has not been properly terminated.</span></span>  
+# <a name="property-missing-end-property"></a><span data-ttu-id="04484-102">속성에 'End Property'가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="04484-102">Property missing 'End Property'</span></span>
+<span data-ttu-id="04484-103">`End` 문은 종료하는 블록과 일치해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="04484-103">An `End` statement must match the block it terminates.</span></span> <span data-ttu-id="04484-104">`Property` 정의가 제대로 종료되지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="04484-104">A `Property` definition has not been properly terminated.</span></span>  
   
- <span data-ttu-id="96a3c-105">**오류 ID:** BC30025</span><span class="sxs-lookup"><span data-stu-id="96a3c-105">**Error ID:** BC30025</span></span>  
+ <span data-ttu-id="04484-105">**오류 ID:** BC30025</span><span class="sxs-lookup"><span data-stu-id="04484-105">**Error ID:** BC30025</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="96a3c-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="96a3c-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="04484-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="04484-106">To correct this error</span></span>  
   
--   <span data-ttu-id="96a3c-107">속성 정의의 끝에 `End Property` 문을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="96a3c-107">Add an `End Property` statement to the end of the property definition.</span></span>  
+-   <span data-ttu-id="04484-107">속성 정의의 끝에 `End Property` 문을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="04484-107">Add an `End Property` statement to the end of the property definition.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="96a3c-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="96a3c-108">See Also</span></span>  
- [<span data-ttu-id="96a3c-109">속성 프로시저</span><span class="sxs-lookup"><span data-stu-id="96a3c-109">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)  
- [<span data-ttu-id="96a3c-110">End 문</span><span class="sxs-lookup"><span data-stu-id="96a3c-110">End Statement</span></span>](../../visual-basic/language-reference/statements/end-statement.md)
+## <a name="see-also"></a><span data-ttu-id="04484-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="04484-108">See Also</span></span>  
+ [<span data-ttu-id="04484-109">속성 프로시저</span><span class="sxs-lookup"><span data-stu-id="04484-109">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)  
+ [<span data-ttu-id="04484-110">End 문</span><span class="sxs-lookup"><span data-stu-id="04484-110">End Statement</span></span>](../../visual-basic/language-reference/statements/end-statement.md)
