--- a/docs/visual-basic/misc/bc33011.md
+++ b/docs/visual-basic/misc/bc33011.md
@@ -1,5 +1,5 @@
 ---
-title: 연산자를 선언 해야 &#39;공개&#39;
+title: 연산자를 'Public'으로 선언해야 합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33011
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC33011
 ms.assetid: 67fc0dee-4ef5-4afc-a63a-f7d20bce7954
-ms.openlocfilehash: 1b45b6db5e0e7feed953b75d2ea1f6b626da6333
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 18ae95d51b2de7289034e2fc06d7a5c9c10f4b42
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33630793"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53770522"
 ---
-# <a name="operators-must-be-declared-39public39"></a><span data-ttu-id="33919-102">연산자를 선언 해야 &#39;공개&#39;</span><span class="sxs-lookup"><span data-stu-id="33919-102">Operators must be declared &#39;Public&#39;</span></span>
-<span data-ttu-id="33919-103">[Operator 문](../../visual-basic/language-reference/statements/operator-statement.md) 포함 되지 않습니다는 [공용](../../visual-basic/language-reference/modifiers/public.md) 키워드입니다.</span><span class="sxs-lookup"><span data-stu-id="33919-103">An [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) does not include the [Public](../../visual-basic/language-reference/modifiers/public.md) keyword.</span></span>  
+# <a name="operators-must-be-declared-public"></a><span data-ttu-id="ea1ef-102">연산자를 'Public'으로 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ea1ef-102">Operators must be declared 'Public'</span></span>
+<span data-ttu-id="ea1ef-103">[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) 에 [Public](../../visual-basic/language-reference/modifiers/public.md) 키워드가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ea1ef-103">An [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) does not include the [Public](../../visual-basic/language-reference/modifiers/public.md) keyword.</span></span>  
   
- <span data-ttu-id="33919-104">`Operator` 절차를 수행 하려면 둘 다는 `Public` 및 [Shared](../../visual-basic/language-reference/modifiers/shared.md) 키워드 및 변환 연산자 필요는 [Widening](../../visual-basic/language-reference/modifiers/widening.md) 또는 [문제의 범위 제한](../../visual-basic/language-reference/modifiers/narrowing.md)키워드입니다.</span><span class="sxs-lookup"><span data-stu-id="33919-104">An `Operator` procedure requires both the `Public` and [Shared](../../visual-basic/language-reference/modifiers/shared.md) keywords, and a conversion operator also requires either the [Widening](../../visual-basic/language-reference/modifiers/widening.md) or the [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md) keyword.</span></span>  
+ <span data-ttu-id="ea1ef-104">`Operator` 절차를 수행 하려면 둘 다는 `Public` 및 [공유](../../visual-basic/language-reference/modifiers/shared.md) 키워드와 변환 연산자가 필요 합니다 [Widening](../../visual-basic/language-reference/modifiers/widening.md) 또는 [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md)키워드입니다.</span><span class="sxs-lookup"><span data-stu-id="ea1ef-104">An `Operator` procedure requires both the `Public` and [Shared](../../visual-basic/language-reference/modifiers/shared.md) keywords, and a conversion operator also requires either the [Widening](../../visual-basic/language-reference/modifiers/widening.md) or the [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md) keyword.</span></span>  
   
- <span data-ttu-id="33919-105">**오류 ID:** BC33011</span><span class="sxs-lookup"><span data-stu-id="33919-105">**Error ID:** BC33011</span></span>  
+ <span data-ttu-id="ea1ef-105">**오류 ID:** BC33011</span><span class="sxs-lookup"><span data-stu-id="ea1ef-105">**Error ID:** BC33011</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="33919-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="33919-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ea1ef-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ea1ef-106">To correct this error</span></span>  
   
--   <span data-ttu-id="33919-107">`Public` 문에 `Operator` 키워드를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="33919-107">Add the `Public` keyword to the `Operator` statement.</span></span>  
+-   <span data-ttu-id="ea1ef-107">`Public` 문에 `Operator` 키워드를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="ea1ef-107">Add the `Public` keyword to the `Operator` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="33919-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="33919-108">See Also</span></span>  
- [<span data-ttu-id="33919-109">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="33919-109">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [<span data-ttu-id="33919-110">Operator 문</span><span class="sxs-lookup"><span data-stu-id="33919-110">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
- [<span data-ttu-id="33919-111">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="33919-111">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [<span data-ttu-id="33919-112">방법: 변환 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="33919-112">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a><span data-ttu-id="ea1ef-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="ea1ef-108">See Also</span></span>  
+ [<span data-ttu-id="ea1ef-109">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="ea1ef-109">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
+ [<span data-ttu-id="ea1ef-110">Operator 문</span><span class="sxs-lookup"><span data-stu-id="ea1ef-110">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
+ [<span data-ttu-id="ea1ef-111">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="ea1ef-111">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
+ [<span data-ttu-id="ea1ef-112">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="ea1ef-112">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
