--- a/docs/visual-basic/misc/bc33012.md
+++ b/docs/visual-basic/misc/bc33012.md
@@ -1,5 +1,5 @@
 ---
-title: 연산자를 선언 해야 &#39;공유&#39;
+title: 연산자를 'Shared'로 선언해야 합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33012
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC33012
 ms.assetid: 5ad97616-4032-46cd-aaf7-517db5d1195f
-ms.openlocfilehash: da12a026a334e31b4cb63778289014da20fca88c
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 45467e750f0d5d12fff4ba27e919b5a2a6ed1ee0
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33629486"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53771978"
 ---
-# <a name="operators-must-be-declared-39shared39"></a><span data-ttu-id="12198-102">연산자를 선언 해야 &#39;공유&#39;</span><span class="sxs-lookup"><span data-stu-id="12198-102">Operators must be declared &#39;Shared&#39;</span></span>
-<span data-ttu-id="12198-103">[Operator 문](../../visual-basic/language-reference/statements/operator-statement.md) 포함 되지 않습니다는 [Shared](../../visual-basic/language-reference/modifiers/shared.md) 키워드입니다.</span><span class="sxs-lookup"><span data-stu-id="12198-103">An [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) does not include the [Shared](../../visual-basic/language-reference/modifiers/shared.md) keyword.</span></span>  
+# <a name="operators-must-be-declared-shared"></a><span data-ttu-id="f9cc2-102">연산자를 'Shared'로 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9cc2-102">Operators must be declared 'Shared'</span></span>
+<span data-ttu-id="f9cc2-103">[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) 에 [Shared](../../visual-basic/language-reference/modifiers/shared.md) 키워드가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="f9cc2-103">An [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) does not include the [Shared](../../visual-basic/language-reference/modifiers/shared.md) keyword.</span></span>  
   
- <span data-ttu-id="12198-104">`Operator` 절차를 수행 하려면 둘 다는 [공용](../../visual-basic/language-reference/modifiers/public.md) 및 `Shared` 키워드 및 변환 연산자 필요는 [Widening](../../visual-basic/language-reference/modifiers/widening.md) 또는 [문제의 범위 제한](../../visual-basic/language-reference/modifiers/narrowing.md)키워드입니다.</span><span class="sxs-lookup"><span data-stu-id="12198-104">An `Operator` procedure requires both the [Public](../../visual-basic/language-reference/modifiers/public.md) and `Shared` keywords, and a conversion operator also requires either the [Widening](../../visual-basic/language-reference/modifiers/widening.md) or the [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md) keyword.</span></span>  
+ <span data-ttu-id="f9cc2-104">`Operator` 절차를 수행 하려면 둘 다는 [공용](../../visual-basic/language-reference/modifiers/public.md) 및 `Shared` 키워드와 변환 연산자가 필요 합니다 [Widening](../../visual-basic/language-reference/modifiers/widening.md) 또는 [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md)키워드입니다.</span><span class="sxs-lookup"><span data-stu-id="f9cc2-104">An `Operator` procedure requires both the [Public](../../visual-basic/language-reference/modifiers/public.md) and `Shared` keywords, and a conversion operator also requires either the [Widening](../../visual-basic/language-reference/modifiers/widening.md) or the [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md) keyword.</span></span>  
   
- <span data-ttu-id="12198-105">**오류 ID:** BC33012</span><span class="sxs-lookup"><span data-stu-id="12198-105">**Error ID:** BC33012</span></span>  
+ <span data-ttu-id="f9cc2-105">**오류 ID:** BC33012</span><span class="sxs-lookup"><span data-stu-id="f9cc2-105">**Error ID:** BC33012</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="12198-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="12198-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f9cc2-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f9cc2-106">To correct this error</span></span>  
   
--   <span data-ttu-id="12198-107">`Shared` 문에 `Operator` 키워드를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="12198-107">Add the `Shared` keyword to the `Operator` statement.</span></span>  
+-   <span data-ttu-id="f9cc2-107">`Shared` 문에 `Operator` 키워드를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="f9cc2-107">Add the `Shared` keyword to the `Operator` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="12198-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="12198-108">See Also</span></span>  
- [<span data-ttu-id="12198-109">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="12198-109">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [<span data-ttu-id="12198-110">Operator 문</span><span class="sxs-lookup"><span data-stu-id="12198-110">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
- [<span data-ttu-id="12198-111">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="12198-111">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [<span data-ttu-id="12198-112">방법: 변환 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="12198-112">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a><span data-ttu-id="f9cc2-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="f9cc2-108">See Also</span></span>  
+ [<span data-ttu-id="f9cc2-109">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="f9cc2-109">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
+ [<span data-ttu-id="f9cc2-110">Operator 문</span><span class="sxs-lookup"><span data-stu-id="f9cc2-110">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
+ [<span data-ttu-id="f9cc2-111">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="f9cc2-111">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
+ [<span data-ttu-id="f9cc2-112">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9cc2-112">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
